testsuite/tests/parse-errors/unclosed_simple_expr.compilers.reference
Line 5, characters 5-7:
  (3; 2;;
       ^^
Error: Syntax error: ')' expected
Line 5, characters 0-1:
  (3; 2;;
  ^
This '(' might be unmatched
Line 2, characters 10-12:
  begin 3; 2;;
            ^^
Error: Syntax error: 'end' expected
Line 2, characters 0-5:
  begin 3; 2;;
  ^^^^^
This 'begin' might be unmatched
Line 2, characters 10-12:
  List.(3; 2;;
            ^^
Error: Syntax error: ')' expected
Line 2, characters 5-6:
  List.(3; 2;;
       ^
This '(' might be unmatched
Line 2, characters 17-19:
  simple_expr.(3; 2;;
                   ^^
Error: Syntax error: ')' expected
Line 2, characters 12-13:
  simple_expr.(3; 2;;
              ^
This '(' might be unmatched
Line 2, characters 17-19:
  simple_expr.[3; 2;;
                   ^^
Error: Syntax error: ']' expected
Line 2, characters 12-13:
  simple_expr.[3; 2;;
              ^
This '[' might be unmatched
Line 2, characters 15-17:
  simple_expr.%[3;;
                 ^^
Error: Syntax error: ']' expected
Line 2, characters 13-14:
  simple_expr.%[3;;
               ^
This '[' might be unmatched
Line 2, characters 15-17:
  simple_expr.%(3;;
                 ^^
Error: Syntax error: ')' expected
Line 2, characters 13-14:
  simple_expr.%(3;;
               ^
This '(' might be unmatched
Line 2, characters 15-17:
  simple_expr.%{3;;
                 ^^
Error: Syntax error: '}' expected
Line 2, characters 13-14:
  simple_expr.%{3;;
               ^
This '{' might be unmatched
Line 2, characters 11-13:
  foo.Bar.%[3;;
             ^^
Error: Syntax error: ']' expected
Line 2, characters 9-10:
  foo.Bar.%[3;;
           ^
This '[' might be unmatched
Line 2, characters 11-13:
  foo.Bar.%(3;;
             ^^
Error: Syntax error: ')' expected
Line 2, characters 9-10:
  foo.Bar.%(3;;
           ^
This '(' might be unmatched
Line 2, characters 11-13:
  foo.Bar.%{3;;
             ^^
Error: Syntax error: '}' expected
Line 2, characters 9-10:
  foo.Bar.%{3;;
           ^
This '{' might be unmatched
Line 2, characters 17-19:
  simple_expr.{3, 2;;
                   ^^
Error: Syntax error: '}' expected
Line 2, characters 12-13:
  simple_expr.{3, 2;;
              ^
This '{' might be unmatched
Line 2, characters 10-12:
  { x = 3; y;;
            ^^
Error: Syntax error: '}' expected
Line 2, characters 0-1:
  { x = 3; y;;
  ^
This '{' might be unmatched
Line 2, characters 16-18:
  List.{ x = 3; y ;;
                  ^^
Error: Syntax error: '}' expected
Line 2, characters 5-6:
  List.{ x = 3; y ;;
       ^
This '{' might be unmatched
Line 2, characters 7-9:
  [| 3; 2;;
         ^^
Error: Syntax error: '|]' expected
Line 2, characters 0-2:
  [| 3; 2;;
  ^^
This '[|' might be unmatched
Line 2, characters 11-13:
  List.[|3; 2;;
             ^^
Error: Syntax error: '|]' expected
Line 2, characters 5-7:
  List.[|3; 2;;
       ^^
This '[|' might be unmatched
Line 2, characters 5-7:
  [3; 2;;
       ^^
Error: Syntax error: ']' expected
Line 2, characters 0-1:
  [3; 2;;
  ^
This '[' might be unmatched
Line 2, characters 10-12:
  List.[3; 2;;
            ^^
Error: Syntax error: ']' expected
Line 2, characters 5-6:
  List.[3; 2;;
       ^
This '[' might be unmatched
Line 2, characters 13-15:
  {< x = 3; y; ;;
               ^^
Error: Syntax error: '>}' expected
Line 2, characters 0-2:
  {< x = 3; y; ;;
  ^^
This '{<' might be unmatched
Line 2, characters 17-19:
  List.{< x = 3; y ;;
                   ^^
Error: Syntax error: '>}' expected
Line 2, characters 5-7:
  List.{< x = 3; y ;;
       ^^
This '{<' might be unmatched
Line 2, characters 20-22:
  (module struct end :;;
                      ^^
Error: Syntax error: ')' expected
Line 2, characters 0-1:
  (module struct end :;;
  ^
This '(' might be unmatched
Line 2, characters 25-27:
  List.(module struct end :;;
                           ^^
Error: Syntax error: ')' expected
Line 2, characters 5-6:
  List.(module struct end :;;
       ^
This '(' might be unmatched

Line 2, characters 2-3:
  (=;
    ^
Error: Syntax error: ')' expected
Line 2, characters 0-1:
  (=;
  ^
This '(' might be unmatched

